# pyiceberg-bigquery-catalog

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  README.md  pyproject.toml  quickstart.sh  releaserc.json  version.sh
.github/workflows/: ci.yml  pre-commit.yml  release.yml
docs/: CONTRIBUTING.md  INSTALLATION_GUIDE.md
examples/: bigquery_catalog_example.py
pyiceberg_bigquery_catalog/: __init__.py  catalog.py  catalog.py.BAK
tests/: test_catalog.py
