# pyproject.toml
[tool.poetry]
name = "pyiceberg-bigquery-catalog"
version = "0.1.0"
description = "BigQuery catalog implementation for PyIceberg"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/pyiceberg-bigquery-catalog"
repository = "https://github.com/yourusername/pyiceberg-bigquery-catalog"
documentation = "https://github.com/yourusername/pyiceberg-bigquery-catalog"
keywords = ["iceberg", "bigquery", "catalog", "data", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "pyiceberg_bigquery_catalog"}]

[tool.poetry.dependencies]
python = "^3.9"
pyiceberg = "^0.9.1"
google-cloud-bigquery = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
pre-commit = "^3.5.0""

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true